[tool.poetry]
name = "asynced"
version = "0.2.1"
description = "Async python for Event-Driven applications"
authors = ["Joren Hammudoglu <jhammudoglu@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jorenham/asynced"

[tool.poetry.dependencies]
python = ">=3.9,<4"
typing-extensions = ">4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-asyncio = "^0.18"
pyright = "^1.1.231"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["tests/", "examples/"]

[tool.pyright]
include = ["asynced/"]
stubPath = ""
venvPath = "."
venv = ".venv/"
pythonVersion = "3.9"

[tool.pytest.ini_options]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
