[tool.poetry]
name = "asynced"
version = "1.3.1"
description = "Async python for Event-Driven applications"
authors = ["Joren Hammudoglu <jhammudoglu@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jorenham/asynced"

[tool.poetry.dependencies]
python = ">=3.9,<4"
typing-extensions = "^4.2"

[tool.poetry.dev-dependencies]
pyright = "^1.1"
pytest = "^7.1"
pytest-asyncio = "^0.18"

[tool.pyright]
include = ["asynced"]
exclude = [
    ".git",
    "**/__pycache__",
    "**/.pytest_cache",
    "dist",
]
venv = ".venv"

pythonVersion = "3.9"
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "asynced" }
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--maxfail=1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
